// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAssetsDistribution 1 1`] = `
Array [
  Array [
    "ETH",
    "91567320673995756243",
    "2211214475036682335.026851350093448192",
    0.5173782299459464,
  ],
  Array [
    "ETC",
    "2.712284445042740711869e+21",
    "2062669399772254509.8615000739980481247",
    0.48262176964997167,
  ],
  Array [
    "BTC",
    "881104851",
    "881104851",
    2.0616022252e-10,
  ],
  Array [
    "DOGE",
    "950434693877359",
    "267265781.25475152716980206676574",
    6.253463804e-11,
  ],
  Array [
    "LTC",
    "38097254271",
    "204990481.832471616330725736",
    4.796351229e-11,
  ],
  Array [
    "BCH",
    "4047649546",
    "117114415.540497770572621298",
    2.740233917e-11,
  ],
  Array [
    "DASH",
    "9370391898",
    "87085006.563714518525597508",
    2.037608159e-11,
  ],
  Array [
    "ZEC",
    "16584024011",
    "85565042.301023728843694522",
    2.002044154e-11,
  ],
  Array [
    "BTG",
    "68039168535",
    "77567372.853741766680084855",
    1.814915311e-11,
  ],
  Array [
    "MKR",
    "64666631",
    "2581240.744967839722218645",
    6.0395669e-13,
  ],
  Array [
    "XRP",
    "95079867231",
    "2347044.853569621963154908468",
    5.4915972e-13,
  ],
  Array [
    "DGD",
    "140990668",
    "646601.247999367335550876",
    1.5129125e-13,
  ],
  Array [
    "PPC",
    "19796694494",
    "549388.084193664056547413498",
    1.2854539e-13,
  ],
  Array [
    "MCO",
    "103783345",
    "63209.236245450965100725",
    1.478965e-14,
  ],
  Array [
    "QNT",
    "69147119",
    "41608.833185494708318908",
    9.7356e-15,
  ],
  Array [
    "HT",
    "50555972",
    "24139.795312712325049026",
    5.64821e-15,
  ],
  Array [
    "PAX",
    "135533712",
    "15321.57235091475637453248",
    3.58493e-15,
  ],
  Array [
    "LEO",
    "75601895",
    "9089.2066747521099796549",
    2.12669e-15,
  ],
  Array [
    "PPT",
    "234986301",
    "7224.84955371782861509482",
    1.69046e-15,
  ],
  Array [
    "OMG",
    "67895926",
    "5736.97242056772315116866",
    1.34233e-15,
  ],
  Array [
    "NEXO",
    "153521085",
    "1936.32014182722655106043",
    4.5306e-16,
  ],
  Array [
    "BRD",
    "140956447",
    "1935.816855663514574477414",
    4.5294e-16,
  ],
  Array [
    "GXC",
    "33668814",
    "1671.18431998989895861878",
    3.9102e-16,
  ],
  Array [
    "FSN",
    "110322453",
    "1603.172707111166757789051",
    3.7511e-16,
  ],
  Array [
    "BAT",
    "58578809",
    "1259.538227795544100945122",
    2.9471e-16,
  ],
  Array [
    "ENG",
    "55731664",
    "1079.014960274418731322272",
    2.5247e-16,
  ],
  Array [
    "ODE",
    "179969292",
    "976.86378600961985446077",
    2.2857e-16,
  ],
  Array [
    "GNT",
    "148640102",
    "756.79074097324596720978",
    1.7707e-16,
  ],
  Array [
    "MANA",
    "170846945",
    "713.62515260061041732326",
    1.6697e-16,
  ],
  Array [
    "ELF",
    "72751442",
    "626.268533421798131874064",
    1.4653e-16,
  ],
  Array [
    "SAN",
    "46092044",
    "624.427536271191105830648",
    1.461e-16,
  ],
  Array [
    "DGTX",
    "108560700",
    "597.7859529527727058557",
    1.3987e-16,
  ],
  Array [
    "QASH",
    "103115269",
    "395.525225204357992198809",
    9.254e-17,
  ],
  Array [
    "REN",
    "51279909",
    "386.390736816594175861668",
    9.041e-17,
  ],
  Array [
    "BTM",
    "44441049",
    "353.258752753289444744064",
    8.266e-17,
  ],
  Array [
    "SNT",
    "93912287",
    "226.519958994793464995491",
    5.3e-17,
  ],
  Array [
    "PAI",
    "97453392",
    "176.0545818511487036794272",
    4.119e-17,
  ],
  Array [
    "BNT",
    "5550994",
    "131.70926747962162777578",
    3.082e-17,
  ],
  Array [
    "CRO",
    "13911624",
    "89.311874661813231586296",
    2.09e-17,
  ],
  Array [
    "ONE",
    "88752907",
    "25.4423462995661061502884",
    5.95e-18,
  ],
  Array [
    "MATIC",
    "10772524",
    "19.3955829094077027627104",
    4.54e-18,
  ],
  Array [
    "AOA",
    "128911119",
    "19.21336718694525557341206",
    4.5e-18,
  ],
  Array [
    "XMX",
    "99881980",
    "5.802461566694738369204",
    1.36e-18,
  ],
  Array [
    "HOT",
    "126663771",
    "5.19670661209429084824729",
    1.22e-18,
  ],
  Array [
    "NPXS",
    "91784011",
    "1.261102390619683643420488",
    3e-19,
  ],
]
`;

exports[`getBalanceHistory last item is now and have an amount equals to account balance 1`] = `
Array [
  Object {
    "date": 2018-02-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-27T03:59:59.999Z,
    "value": "196896345",
  },
  Object {
    "date": 2018-02-28T03:59:59.999Z,
    "value": "241107807",
  },
  Object {
    "date": 2018-03-01T03:59:59.999Z,
    "value": "439180273",
  },
  Object {
    "date": 2018-03-02T03:59:59.999Z,
    "value": "442990787",
  },
  Object {
    "date": 2018-03-03T03:59:59.999Z,
    "value": "723810504",
  },
  Object {
    "date": 2018-03-04T03:59:59.999Z,
    "value": "584558945",
  },
  Object {
    "date": 2018-03-05T03:59:59.999Z,
    "value": "827915045",
  },
  Object {
    "date": 2018-03-06T03:59:59.999Z,
    "value": "840671207",
  },
  Object {
    "date": 2018-03-07T03:59:59.999Z,
    "value": "1090846436",
  },
  Object {
    "date": 2018-03-08T03:59:59.999Z,
    "value": "1201087006",
  },
  Object {
    "date": 2018-03-09T03:59:59.999Z,
    "value": "1503032356",
  },
  Object {
    "date": 2018-03-10T03:59:59.999Z,
    "value": "1764906425",
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": "1981297870",
  },
  Object {
    "date": 2018-03-12T03:59:59.999Z,
    "value": "1861927510",
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": "1895812270",
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": "2049215891",
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": "2141903741",
  },
]
`;

exports[`getBalanceHistory(*,month) returns an array of 30 items 1`] = `
Array [
  Object {
    "date": 2018-02-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-23T03:59:59.999Z,
    "value": "751284344151631548",
  },
  Object {
    "date": 2018-02-24T03:59:59.999Z,
    "value": "1670629284800028060",
  },
  Object {
    "date": 2018-02-25T03:59:59.999Z,
    "value": "2354706924061508237",
  },
  Object {
    "date": 2018-02-26T03:59:59.999Z,
    "value": "524485823996633501",
  },
  Object {
    "date": 2018-02-27T03:59:59.999Z,
    "value": "1836129959847807427",
  },
  Object {
    "date": 2018-02-28T03:59:59.999Z,
    "value": "2582399663352795767",
  },
  Object {
    "date": 2018-03-01T03:59:59.999Z,
    "value": "2714603825855206657",
  },
  Object {
    "date": 2018-03-02T03:59:59.999Z,
    "value": "3694247190223204159",
  },
  Object {
    "date": 2018-03-03T03:59:59.999Z,
    "value": "3482983535847667197",
  },
  Object {
    "date": 2018-03-04T03:59:59.999Z,
    "value": "3487682569740325833",
  },
  Object {
    "date": 2018-03-05T03:59:59.999Z,
    "value": "3613241456700506617",
  },
  Object {
    "date": 2018-03-06T03:59:59.999Z,
    "value": "3303438360247575810",
  },
  Object {
    "date": 2018-03-07T03:59:59.999Z,
    "value": "3472270439920747522",
  },
  Object {
    "date": 2018-03-08T03:59:59.999Z,
    "value": "3632475934985008552",
  },
  Object {
    "date": 2018-03-09T03:59:59.999Z,
    "value": "4114758122490487872",
  },
  Object {
    "date": 2018-03-10T03:59:59.999Z,
    "value": "5140497606648782101",
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": "5715831185454035207",
  },
  Object {
    "date": 2018-03-12T03:59:59.999Z,
    "value": "7302298669191520472",
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": "8259954763031928683",
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": "8040625602721231407",
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": "9182280434134623693",
  },
]
`;

exports[`getBalanceHistory(*,year) works as well 1`] = `
Array [
  Object {
    "date": 2011-03-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-04-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-04-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-04-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-04-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-05-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-05-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-05-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-05-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-05-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-06-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-06-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-06-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-06-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-07-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-07-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-07-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-07-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-07-31T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-08-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-08-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-08-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-08-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-09-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-09-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-09-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-09-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-10-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-10-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-10-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-10-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-10-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-11-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-11-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-11-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-11-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-12-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-12-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-12-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2011-12-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-01-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-01-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-01-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-01-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-01-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-02-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-02-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-02-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-02-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-03-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-03-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-03-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-03-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-04-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-04-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-04-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-04-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-04-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-05-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-05-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-05-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-05-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-06-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-06-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-06-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-06-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-07-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-07-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-07-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-07-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-07-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-08-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-08-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-08-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-08-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-09-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-09-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-09-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-09-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-09-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-10-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-10-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-10-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-10-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-11-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-11-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-11-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-11-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-12-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-12-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-12-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-12-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2012-12-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-01-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-01-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-01-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-01-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-02-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-02-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-02-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-02-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-03-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-03-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-03-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-03-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-03-31T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-04-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-04-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-04-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-04-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-05-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-05-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-05-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-05-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-06-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-06-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-06-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-06-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-06-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-07-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-07-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-07-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-07-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-08-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-08-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-08-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-08-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-09-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-09-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-09-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-09-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-09-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-10-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-10-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-10-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-10-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-11-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-11-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-11-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-11-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-12-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-12-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-12-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-12-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2013-12-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-01-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-01-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-01-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-01-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-02-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-02-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-02-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-02-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-03-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-03-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-03-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-03-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-03-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-04-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-04-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-04-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-04-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-05-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-05-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-05-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-05-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-06-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-06-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-06-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-06-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-06-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-07-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-07-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-07-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-07-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-08-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-08-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-08-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-08-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-08-31T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-09-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-09-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-09-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-09-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-10-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-10-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-10-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-10-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-11-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-11-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-11-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-11-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-11-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-12-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-12-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-12-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2014-12-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-01-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-01-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-01-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-01-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-02-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-02-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-02-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-02-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-03-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-03-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-03-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-03-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-03-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-04-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-04-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-04-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-04-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-05-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-05-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-05-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-05-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-05-31T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-06-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-06-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-06-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-06-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-07-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-07-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-07-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-07-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-08-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-08-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-08-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-08-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-08-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-09-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-09-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-09-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-09-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-10-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-10-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-10-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-10-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-11-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-11-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-11-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-11-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-11-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-12-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-12-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-12-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2015-12-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-01-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-01-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-01-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-01-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-01-31T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-02-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-02-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-02-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-02-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-03-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-03-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-03-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-03-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-04-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-04-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-04-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-04-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-05-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-05-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-05-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-05-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-05-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-06-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-06-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-06-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-06-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-07-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-07-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-07-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-07-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-07-31T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-08-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-08-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-08-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-08-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-09-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-09-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-09-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-09-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-10-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-10-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-10-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-10-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-10-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-11-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-11-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-11-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-11-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-12-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-12-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-12-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2016-12-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-01-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-01-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-01-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-01-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-01-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-02-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-02-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-02-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-02-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-03-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-03-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-03-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-03-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-04-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-04-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-04-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-04-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-04-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-05-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-05-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-05-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-05-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-06-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-06-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-06-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-06-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-07-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-07-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-07-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-07-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-07-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-08-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-08-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-08-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-08-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-09-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-09-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-09-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-09-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-10-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-10-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-10-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-10-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-10-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-11-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-11-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-11-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-11-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-12-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-12-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-12-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-12-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-12-31T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-01-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-01-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-01-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-01-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": "4536031169",
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": "8738269373",
  },
]
`;

exports[`getCurrencyPortfolio works with one account and is identically to that account history 1`] = `
Array [
  Object {
    "countervalue": "0",
    "date": 2018-03-07T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-07T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-07T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-07T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-07T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-07T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T13:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T14:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T15:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T16:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T17:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T13:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T14:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T15:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T16:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T17:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T13:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T14:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T15:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T16:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T17:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-11T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "248658.3",
    "date": 2018-03-11T13:59:59.999Z,
    "value": "2486583",
  },
  Object {
    "countervalue": "170713",
    "date": 2018-03-11T14:59:59.999Z,
    "value": "1707130",
  },
  Object {
    "countervalue": "2864213.2",
    "date": 2018-03-11T15:59:59.999Z,
    "value": "28642132",
  },
  Object {
    "countervalue": "2864213.2",
    "date": 2018-03-11T16:59:59.999Z,
    "value": "28642132",
  },
  Object {
    "countervalue": "6565976.4",
    "date": 2018-03-11T17:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "countervalue": "6565976.4",
    "date": 2018-03-11T18:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "countervalue": "6565976.4",
    "date": 2018-03-11T19:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "countervalue": "6565976.4",
    "date": 2018-03-11T20:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "countervalue": "6565976.4",
    "date": 2018-03-11T21:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "countervalue": "6565976.4",
    "date": 2018-03-11T22:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "countervalue": "6565976.4",
    "date": 2018-03-11T23:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "countervalue": "6565976.4",
    "date": 2018-03-12T00:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "countervalue": "6565976.4",
    "date": 2018-03-12T01:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "countervalue": "6742907.9",
    "date": 2018-03-12T02:59:59.999Z,
    "value": "67429079",
  },
  Object {
    "countervalue": "6784819.4",
    "date": 2018-03-12T03:59:59.999Z,
    "value": "67848194",
  },
  Object {
    "countervalue": "6784819.4",
    "date": 2018-03-12T04:59:59.999Z,
    "value": "67848194",
  },
  Object {
    "countervalue": "6668284.8",
    "date": 2018-03-12T05:59:59.999Z,
    "value": "66682848",
  },
  Object {
    "countervalue": "8219013.1",
    "date": 2018-03-12T06:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "countervalue": "8219013.1",
    "date": 2018-03-12T07:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "countervalue": "8219013.1",
    "date": 2018-03-12T08:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "countervalue": "8219013.1",
    "date": 2018-03-12T09:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "countervalue": "8219013.1",
    "date": 2018-03-12T10:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "countervalue": "8219013.1",
    "date": 2018-03-12T11:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "countervalue": "8825538.3",
    "date": 2018-03-12T12:59:59.999Z,
    "value": "88255383",
  },
  Object {
    "countervalue": "9197120.2",
    "date": 2018-03-12T13:59:59.999Z,
    "value": "91971202",
  },
  Object {
    "countervalue": "9197120.2",
    "date": 2018-03-12T14:59:59.999Z,
    "value": "91971202",
  },
  Object {
    "countervalue": "7635573.3",
    "date": 2018-03-12T15:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "countervalue": "7635573.3",
    "date": 2018-03-12T16:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "countervalue": "7635573.3",
    "date": 2018-03-12T17:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "countervalue": "7635573.3",
    "date": 2018-03-12T18:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "countervalue": "7635573.3",
    "date": 2018-03-12T19:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "countervalue": "7635573.3",
    "date": 2018-03-12T20:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "countervalue": "7635573.3",
    "date": 2018-03-12T21:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "countervalue": "7635573.3",
    "date": 2018-03-12T22:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "countervalue": "7635573.3",
    "date": 2018-03-12T23:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "countervalue": "7635573.3",
    "date": 2018-03-13T00:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "countervalue": "8072578.1",
    "date": 2018-03-13T01:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "countervalue": "8072578.1",
    "date": 2018-03-13T02:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "countervalue": "8072578.1",
    "date": 2018-03-13T03:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "countervalue": "8072578.1",
    "date": 2018-03-13T04:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "countervalue": "8072578.1",
    "date": 2018-03-13T05:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "countervalue": "8072578.1",
    "date": 2018-03-13T06:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "countervalue": "8115171.1",
    "date": 2018-03-13T07:59:59.999Z,
    "value": "81151711",
  },
  Object {
    "countervalue": "7640173.3",
    "date": 2018-03-13T08:59:59.999Z,
    "value": "76401733",
  },
  Object {
    "countervalue": "8700825.8",
    "date": 2018-03-13T09:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "countervalue": "8700825.8",
    "date": 2018-03-13T10:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "countervalue": "8700825.8",
    "date": 2018-03-13T11:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "countervalue": "8700825.8",
    "date": 2018-03-13T12:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "countervalue": "8700825.8",
    "date": 2018-03-13T13:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "countervalue": "8700825.8",
    "date": 2018-03-13T14:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "countervalue": "7948973.1",
    "date": 2018-03-13T15:59:59.999Z,
    "value": "79489731",
  },
  Object {
    "countervalue": "7948973.1",
    "date": 2018-03-13T16:59:59.999Z,
    "value": "79489731",
  },
  Object {
    "countervalue": "7948973.1",
    "date": 2018-03-13T17:59:59.999Z,
    "value": "79489731",
  },
  Object {
    "countervalue": "8355651.6",
    "date": 2018-03-13T18:59:59.999Z,
    "value": "83556516",
  },
  Object {
    "countervalue": "8355651.6",
    "date": 2018-03-13T19:59:59.999Z,
    "value": "83556516",
  },
  Object {
    "countervalue": "8355651.6",
    "date": 2018-03-13T20:59:59.999Z,
    "value": "83556516",
  },
  Object {
    "countervalue": "8355651.6",
    "date": 2018-03-13T21:59:59.999Z,
    "value": "83556516",
  },
  Object {
    "countervalue": "8892238.9",
    "date": 2018-03-13T22:59:59.999Z,
    "value": "88922389",
  },
  Object {
    "countervalue": "13804071.2",
    "date": 2018-03-13T23:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "countervalue": "13804071.2",
    "date": 2018-03-14T00:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "countervalue": "13804071.2",
    "date": 2018-03-14T01:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "countervalue": "13804071.2",
    "date": 2018-03-14T02:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "countervalue": "13804071.2",
    "date": 2018-03-14T03:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "countervalue": "13804071.2",
    "date": 2018-03-14T04:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "countervalue": "14001532.6",
    "date": 2018-03-14T05:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "countervalue": "14001532.6",
    "date": 2018-03-14T06:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "countervalue": "14001532.6",
    "date": 2018-03-14T07:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "countervalue": "14001532.6",
    "date": 2018-03-14T08:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "countervalue": "14001532.6",
    "date": 2018-03-14T09:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "countervalue": "14001532.6",
    "date": 2018-03-14T10:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "countervalue": "17989606.4",
    "date": 2018-03-14T11:59:59.999Z,
    "value": "179896064",
  },
  Object {
    "countervalue": "16940453.9",
    "date": 2018-03-14T12:59:59.999Z,
    "value": "169404539",
  },
  Object {
    "countervalue": "16940453.9",
    "date": 2018-03-14T13:59:59.999Z,
    "value": "169404539",
  },
  Object {
    "countervalue": "16940453.9",
    "date": 2018-03-14T14:59:59.999Z,
    "value": "169404539",
  },
  Object {
    "countervalue": "15825197.2",
    "date": 2018-03-14T15:59:59.999Z,
    "value": "158251972",
  },
  Object {
    "countervalue": "16841893.6",
    "date": 2018-03-14T16:59:59.999Z,
    "value": "168418936",
  },
  Object {
    "countervalue": "16841893.6",
    "date": 2018-03-14T17:34:42.000Z,
    "value": "168418936",
  },
]
`;

exports[`getPortfolio with lot of accounts 1`] = `
Array [
  Object {
    "date": 2018-03-07T18:59:59.999Z,
    "value": "1.431456818550017175517e+21",
  },
  Object {
    "date": 2018-03-07T19:59:59.999Z,
    "value": "1.446195018194787461262e+21",
  },
  Object {
    "date": 2018-03-07T20:59:59.999Z,
    "value": "1.451996335426967992041e+21",
  },
  Object {
    "date": 2018-03-07T21:59:59.999Z,
    "value": "1.463204111675008948083e+21",
  },
  Object {
    "date": 2018-03-07T22:59:59.999Z,
    "value": "1.47265204278602821276e+21",
  },
  Object {
    "date": 2018-03-07T23:59:59.999Z,
    "value": "1.479102164038136203609e+21",
  },
  Object {
    "date": 2018-03-08T00:59:59.999Z,
    "value": "1.518838317867441893556e+21",
  },
  Object {
    "date": 2018-03-08T01:59:59.999Z,
    "value": "1.518971961751059401595e+21",
  },
  Object {
    "date": 2018-03-08T02:59:59.999Z,
    "value": "1.518361977584924313924e+21",
  },
  Object {
    "date": 2018-03-08T03:59:59.999Z,
    "value": "1.519281014594515703053e+21",
  },
  Object {
    "date": 2018-03-08T04:59:59.999Z,
    "value": "1.520089033478715799475e+21",
  },
  Object {
    "date": 2018-03-08T05:59:59.999Z,
    "value": "1.517566952385952627946e+21",
  },
  Object {
    "date": 2018-03-08T06:59:59.999Z,
    "value": "1.500338048214263320584e+21",
  },
  Object {
    "date": 2018-03-08T07:59:59.999Z,
    "value": "1.485302039441619204665e+21",
  },
  Object {
    "date": 2018-03-08T08:59:59.999Z,
    "value": "1.508535437613237392905e+21",
  },
  Object {
    "date": 2018-03-08T09:59:59.999Z,
    "value": "1.51977957716526185596e+21",
  },
  Object {
    "date": 2018-03-08T10:59:59.999Z,
    "value": "1.520651994955531818296e+21",
  },
  Object {
    "date": 2018-03-08T11:59:59.999Z,
    "value": "1.526434714178570607219e+21",
  },
  Object {
    "date": 2018-03-08T12:59:59.999Z,
    "value": "1.526435944497149706867e+21",
  },
  Object {
    "date": 2018-03-08T13:59:59.999Z,
    "value": "1.53176292705821412711e+21",
  },
  Object {
    "date": 2018-03-08T14:59:59.999Z,
    "value": "1.541046452085818145898e+21",
  },
  Object {
    "date": 2018-03-08T15:59:59.999Z,
    "value": "1.542007067399493373606e+21",
  },
  Object {
    "date": 2018-03-08T16:59:59.999Z,
    "value": "1.542251345296560971538e+21",
  },
  Object {
    "date": 2018-03-08T17:59:59.999Z,
    "value": "1.543470701161687323859e+21",
  },
  Object {
    "date": 2018-03-08T18:59:59.999Z,
    "value": "1.543540338232990353177e+21",
  },
  Object {
    "date": 2018-03-08T19:59:59.999Z,
    "value": "1.543540338011986395718e+21",
  },
  Object {
    "date": 2018-03-08T20:59:59.999Z,
    "value": "1.543540334723310741453e+21",
  },
  Object {
    "date": 2018-03-08T21:59:59.999Z,
    "value": "1.543680184638828086222e+21",
  },
  Object {
    "date": 2018-03-08T22:59:59.999Z,
    "value": "1.54590136516784041335e+21",
  },
  Object {
    "date": 2018-03-08T23:59:59.999Z,
    "value": "1.591722678044523513368e+21",
  },
  Object {
    "date": 2018-03-09T00:59:59.999Z,
    "value": "1.59342303557731883414e+21",
  },
  Object {
    "date": 2018-03-09T01:59:59.999Z,
    "value": "1.587461027407649119706e+21",
  },
  Object {
    "date": 2018-03-09T02:59:59.999Z,
    "value": "1.587610876735395132413e+21",
  },
  Object {
    "date": 2018-03-09T03:59:59.999Z,
    "value": "1.604793801230422145265e+21",
  },
  Object {
    "date": 2018-03-09T04:59:59.999Z,
    "value": "1.606181262029576462274e+21",
  },
  Object {
    "date": 2018-03-09T05:59:59.999Z,
    "value": "1.62754174704166102127e+21",
  },
  Object {
    "date": 2018-03-09T06:59:59.999Z,
    "value": "1.651209976447079466552e+21",
  },
  Object {
    "date": 2018-03-09T07:59:59.999Z,
    "value": "1.652565871578110211707e+21",
  },
  Object {
    "date": 2018-03-09T08:59:59.999Z,
    "value": "1.652847726434678743146e+21",
  },
  Object {
    "date": 2018-03-09T09:59:59.999Z,
    "value": "1.652847728276263179561e+21",
  },
  Object {
    "date": 2018-03-09T10:59:59.999Z,
    "value": "1.63648324288518306612e+21",
  },
  Object {
    "date": 2018-03-09T11:59:59.999Z,
    "value": "1.637187712272037236013e+21",
  },
  Object {
    "date": 2018-03-09T12:59:59.999Z,
    "value": "1.637187712272337204609e+21",
  },
  Object {
    "date": 2018-03-09T13:59:59.999Z,
    "value": "1.603215678026479975738e+21",
  },
  Object {
    "date": 2018-03-09T14:59:59.999Z,
    "value": "1.603418326434357613943e+21",
  },
  Object {
    "date": 2018-03-09T15:59:59.999Z,
    "value": "1.593386431023198688304e+21",
  },
  Object {
    "date": 2018-03-09T16:59:59.999Z,
    "value": "1.593228643046753396871e+21",
  },
  Object {
    "date": 2018-03-09T17:59:59.999Z,
    "value": "1.603127824158336162217e+21",
  },
  Object {
    "date": 2018-03-09T18:59:59.999Z,
    "value": "1.603271836124463983205e+21",
  },
  Object {
    "date": 2018-03-09T19:59:59.999Z,
    "value": "1.617516095976381800167e+21",
  },
  Object {
    "date": 2018-03-09T20:59:59.999Z,
    "value": "1.617516095976807173941e+21",
  },
  Object {
    "date": 2018-03-09T21:59:59.999Z,
    "value": "1.660286232881102345813e+21",
  },
  Object {
    "date": 2018-03-09T22:59:59.999Z,
    "value": "1.667053530057855693432e+21",
  },
  Object {
    "date": 2018-03-09T23:59:59.999Z,
    "value": "1.691799319028383763937e+21",
  },
  Object {
    "date": 2018-03-10T00:59:59.999Z,
    "value": "1.691973937286212655528e+21",
  },
  Object {
    "date": 2018-03-10T01:59:59.999Z,
    "value": "1.691973943296848039495e+21",
  },
  Object {
    "date": 2018-03-10T02:59:59.999Z,
    "value": "1.704453579179679357698e+21",
  },
  Object {
    "date": 2018-03-10T03:59:59.999Z,
    "value": "1.731877102680159403735e+21",
  },
  Object {
    "date": 2018-03-10T04:59:59.999Z,
    "value": "1.763715971240936648601e+21",
  },
  Object {
    "date": 2018-03-10T05:59:59.999Z,
    "value": "1.777210727792858579512e+21",
  },
  Object {
    "date": 2018-03-10T06:59:59.999Z,
    "value": "1.779425265565571638815e+21",
  },
  Object {
    "date": 2018-03-10T07:59:59.999Z,
    "value": "1.826334813297272553639e+21",
  },
  Object {
    "date": 2018-03-10T08:59:59.999Z,
    "value": "1.841120564243585176788e+21",
  },
  Object {
    "date": 2018-03-10T09:59:59.999Z,
    "value": "1.828030796697163762661e+21",
  },
  Object {
    "date": 2018-03-10T10:59:59.999Z,
    "value": "1.842012151735554831397e+21",
  },
  Object {
    "date": 2018-03-10T11:59:59.999Z,
    "value": "1.842078325532729016641e+21",
  },
  Object {
    "date": 2018-03-10T12:59:59.999Z,
    "value": "1.842308782099513276802e+21",
  },
  Object {
    "date": 2018-03-10T13:59:59.999Z,
    "value": "1.845468462168725147347e+21",
  },
  Object {
    "date": 2018-03-10T14:59:59.999Z,
    "value": "1.812632048528348426134e+21",
  },
  Object {
    "date": 2018-03-10T15:59:59.999Z,
    "value": "1.834023766138883425987e+21",
  },
  Object {
    "date": 2018-03-10T16:59:59.999Z,
    "value": "1.862190042487304129593e+21",
  },
  Object {
    "date": 2018-03-10T17:59:59.999Z,
    "value": "1.866250083999200782772e+21",
  },
  Object {
    "date": 2018-03-10T18:59:59.999Z,
    "value": "1.849086824729114474082e+21",
  },
  Object {
    "date": 2018-03-10T19:59:59.999Z,
    "value": "1.893439996497451180964e+21",
  },
  Object {
    "date": 2018-03-10T20:59:59.999Z,
    "value": "1.927327945169357996887e+21",
  },
  Object {
    "date": 2018-03-10T21:59:59.999Z,
    "value": "1.963720462437372631364e+21",
  },
  Object {
    "date": 2018-03-10T22:59:59.999Z,
    "value": "1.963980716551288814124e+21",
  },
  Object {
    "date": 2018-03-10T23:59:59.999Z,
    "value": "1.964171338742860862655e+21",
  },
  Object {
    "date": 2018-03-11T00:59:59.999Z,
    "value": "1.948543001322503827466e+21",
  },
  Object {
    "date": 2018-03-11T01:59:59.999Z,
    "value": "1.935798168992095505645e+21",
  },
  Object {
    "date": 2018-03-11T02:59:59.999Z,
    "value": "1.925607145449428459735e+21",
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": "1.921765731039921069915e+21",
  },
  Object {
    "date": 2018-03-11T04:59:59.999Z,
    "value": "1.922632913152651597266e+21",
  },
  Object {
    "date": 2018-03-11T05:59:59.999Z,
    "value": "1.93112590648256182122e+21",
  },
  Object {
    "date": 2018-03-11T06:59:59.999Z,
    "value": "1.940501951984110669101e+21",
  },
  Object {
    "date": 2018-03-11T07:59:59.999Z,
    "value": "1.944306254036127113395e+21",
  },
  Object {
    "date": 2018-03-11T08:59:59.999Z,
    "value": "1.944565403372673449172e+21",
  },
  Object {
    "date": 2018-03-11T09:59:59.999Z,
    "value": "1.917614688309139130983e+21",
  },
  Object {
    "date": 2018-03-11T10:59:59.999Z,
    "value": "1.938491886882839591903e+21",
  },
  Object {
    "date": 2018-03-11T11:59:59.999Z,
    "value": "1.940244681210997807835e+21",
  },
  Object {
    "date": 2018-03-11T12:59:59.999Z,
    "value": "2.019851269831964850062e+21",
  },
  Object {
    "date": 2018-03-11T13:59:59.999Z,
    "value": "2.036497988991034645285e+21",
  },
  Object {
    "date": 2018-03-11T14:59:59.999Z,
    "value": "2.025201137635946610363e+21",
  },
  Object {
    "date": 2018-03-11T15:59:59.999Z,
    "value": "2.077298865700902313848e+21",
  },
  Object {
    "date": 2018-03-11T16:59:59.999Z,
    "value": "2.099613486508839133292e+21",
  },
  Object {
    "date": 2018-03-11T17:59:59.999Z,
    "value": "2.103491239566617271022e+21",
  },
  Object {
    "date": 2018-03-11T18:59:59.999Z,
    "value": "2.092390689031468716345e+21",
  },
  Object {
    "date": 2018-03-11T19:59:59.999Z,
    "value": "2.10585550793131777756e+21",
  },
  Object {
    "date": 2018-03-11T20:59:59.999Z,
    "value": "2.12523654621863514063e+21",
  },
  Object {
    "date": 2018-03-11T21:59:59.999Z,
    "value": "2.145604732731258474944e+21",
  },
  Object {
    "date": 2018-03-11T22:59:59.999Z,
    "value": "2.121260937448402169404e+21",
  },
  Object {
    "date": 2018-03-11T23:59:59.999Z,
    "value": "2.173988458907470813269e+21",
  },
  Object {
    "date": 2018-03-12T00:59:59.999Z,
    "value": "2.191766645578557278545e+21",
  },
  Object {
    "date": 2018-03-12T01:59:59.999Z,
    "value": "2.192939258563976986787e+21",
  },
  Object {
    "date": 2018-03-12T02:59:59.999Z,
    "value": "2.197896144731283703562e+21",
  },
  Object {
    "date": 2018-03-12T03:59:59.999Z,
    "value": "2.226199591698666085858e+21",
  },
  Object {
    "date": 2018-03-12T04:59:59.999Z,
    "value": "2.241010998569453434616e+21",
  },
  Object {
    "date": 2018-03-12T05:59:59.999Z,
    "value": "2.249946135352443410739e+21",
  },
  Object {
    "date": 2018-03-12T06:59:59.999Z,
    "value": "2.250486248915652135293e+21",
  },
  Object {
    "date": 2018-03-12T07:59:59.999Z,
    "value": "2.271733298588117133032e+21",
  },
  Object {
    "date": 2018-03-12T08:59:59.999Z,
    "value": "2.283090677949433571329e+21",
  },
  Object {
    "date": 2018-03-12T09:59:59.999Z,
    "value": "2.29386068121446486772e+21",
  },
  Object {
    "date": 2018-03-12T10:59:59.999Z,
    "value": "2.321112049543032795779e+21",
  },
  Object {
    "date": 2018-03-12T11:59:59.999Z,
    "value": "2.321833581092953217106e+21",
  },
  Object {
    "date": 2018-03-12T12:59:59.999Z,
    "value": "2.347254890678168573072e+21",
  },
  Object {
    "date": 2018-03-12T13:59:59.999Z,
    "value": "2.359708123758781602262e+21",
  },
  Object {
    "date": 2018-03-12T14:59:59.999Z,
    "value": "2.387639566402984749479e+21",
  },
  Object {
    "date": 2018-03-12T15:59:59.999Z,
    "value": "2.399945018434164113642e+21",
  },
  Object {
    "date": 2018-03-12T16:59:59.999Z,
    "value": "2.405640475266134169419e+21",
  },
  Object {
    "date": 2018-03-12T17:59:59.999Z,
    "value": "2.413937311441130694483e+21",
  },
  Object {
    "date": 2018-03-12T18:59:59.999Z,
    "value": "2.422874230922709593315e+21",
  },
  Object {
    "date": 2018-03-12T19:59:59.999Z,
    "value": "2.418423737281643612425e+21",
  },
  Object {
    "date": 2018-03-12T20:59:59.999Z,
    "value": "2.41875893203934866491e+21",
  },
  Object {
    "date": 2018-03-12T21:59:59.999Z,
    "value": "2.41416444826667445483e+21",
  },
  Object {
    "date": 2018-03-12T22:59:59.999Z,
    "value": "2.45945555872500845116e+21",
  },
  Object {
    "date": 2018-03-12T23:59:59.999Z,
    "value": "2.509736117200474764324e+21",
  },
  Object {
    "date": 2018-03-13T00:59:59.999Z,
    "value": "2.507589558979176808105e+21",
  },
  Object {
    "date": 2018-03-13T01:59:59.999Z,
    "value": "2.507274583966193279424e+21",
  },
  Object {
    "date": 2018-03-13T02:59:59.999Z,
    "value": "2.507110546126433545954e+21",
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": "2.507447798522657479842e+21",
  },
  Object {
    "date": 2018-03-13T04:59:59.999Z,
    "value": "2.522312613418696901119e+21",
  },
  Object {
    "date": 2018-03-13T05:59:59.999Z,
    "value": "2.512652308952001528773e+21",
  },
  Object {
    "date": 2018-03-13T06:59:59.999Z,
    "value": "2.512903677638878980442e+21",
  },
  Object {
    "date": 2018-03-13T07:59:59.999Z,
    "value": "2.540895912757132957656e+21",
  },
  Object {
    "date": 2018-03-13T08:59:59.999Z,
    "value": "2.540895910330078962737e+21",
  },
  Object {
    "date": 2018-03-13T09:59:59.999Z,
    "value": "2.583958444291436935122e+21",
  },
  Object {
    "date": 2018-03-13T10:59:59.999Z,
    "value": "2.577309051712972320032e+21",
  },
  Object {
    "date": 2018-03-13T11:59:59.999Z,
    "value": "2.590685082846638560929e+21",
  },
  Object {
    "date": 2018-03-13T12:59:59.999Z,
    "value": "2.579019502851634963921e+21",
  },
  Object {
    "date": 2018-03-13T13:59:59.999Z,
    "value": "2.625210649989729299557e+21",
  },
  Object {
    "date": 2018-03-13T14:59:59.999Z,
    "value": "2.625341898443189007786e+21",
  },
  Object {
    "date": 2018-03-13T15:59:59.999Z,
    "value": "2.624808918026763704377e+21",
  },
  Object {
    "date": 2018-03-13T16:59:59.999Z,
    "value": "2.623692946312544556897e+21",
  },
  Object {
    "date": 2018-03-13T17:59:59.999Z,
    "value": "2.624111318879159475282e+21",
  },
  Object {
    "date": 2018-03-13T18:59:59.999Z,
    "value": "2.628557171274751740838e+21",
  },
  Object {
    "date": 2018-03-13T19:59:59.999Z,
    "value": "2.650994659559673908249e+21",
  },
  Object {
    "date": 2018-03-13T20:59:59.999Z,
    "value": "2.652775979816054918687e+21",
  },
  Object {
    "date": 2018-03-13T21:59:59.999Z,
    "value": "2.66832845534479484169e+21",
  },
  Object {
    "date": 2018-03-13T22:59:59.999Z,
    "value": "2.682022649268313234287e+21",
  },
  Object {
    "date": 2018-03-13T23:59:59.999Z,
    "value": "2.696138349428218672266e+21",
  },
  Object {
    "date": 2018-03-14T00:59:59.999Z,
    "value": "2.682494722073125683345e+21",
  },
  Object {
    "date": 2018-03-14T01:59:59.999Z,
    "value": "2.68617715232420400908e+21",
  },
  Object {
    "date": 2018-03-14T02:59:59.999Z,
    "value": "2.686405373167215973346e+21",
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": "2.685657704945792429363e+21",
  },
  Object {
    "date": 2018-03-14T04:59:59.999Z,
    "value": "2.750818531229925679616e+21",
  },
  Object {
    "date": 2018-03-14T05:59:59.999Z,
    "value": "2.773961458675054633846e+21",
  },
  Object {
    "date": 2018-03-14T06:59:59.999Z,
    "value": "2.7743291699880357001e+21",
  },
  Object {
    "date": 2018-03-14T07:59:59.999Z,
    "value": "2.78629839510042033852e+21",
  },
  Object {
    "date": 2018-03-14T08:59:59.999Z,
    "value": "2.777918047127955561369e+21",
  },
  Object {
    "date": 2018-03-14T09:59:59.999Z,
    "value": "2.778849531714057576224e+21",
  },
  Object {
    "date": 2018-03-14T10:59:59.999Z,
    "value": "2.778783172402756317079e+21",
  },
  Object {
    "date": 2018-03-14T11:59:59.999Z,
    "value": "2.778361143129448488997e+21",
  },
  Object {
    "date": 2018-03-14T12:59:59.999Z,
    "value": "2.779868948060692612149e+21",
  },
  Object {
    "date": 2018-03-14T13:59:59.999Z,
    "value": "2.787815959841629375031e+21",
  },
  Object {
    "date": 2018-03-14T14:59:59.999Z,
    "value": "2.787815960335216663936e+21",
  },
  Object {
    "date": 2018-03-14T15:59:59.999Z,
    "value": "2.788917973047238673394e+21",
  },
  Object {
    "date": 2018-03-14T16:59:59.999Z,
    "value": "2.798826412916171841628e+21",
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": "2.80385271640650573251e+21",
  },
]
`;

exports[`getPortfolio works with one account and is identically to that account history 1`] = `
Array [
  Object {
    "date": 2018-03-07T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-07T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-07T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-07T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-07T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-07T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T13:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T14:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T15:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T16:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T17:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T13:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T14:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T15:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T16:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T17:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T13:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T14:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T15:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T16:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T17:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T13:59:59.999Z,
    "value": "2486583",
  },
  Object {
    "date": 2018-03-11T14:59:59.999Z,
    "value": "1707130",
  },
  Object {
    "date": 2018-03-11T15:59:59.999Z,
    "value": "28642132",
  },
  Object {
    "date": 2018-03-11T16:59:59.999Z,
    "value": "28642132",
  },
  Object {
    "date": 2018-03-11T17:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "date": 2018-03-11T18:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "date": 2018-03-11T19:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "date": 2018-03-11T20:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "date": 2018-03-11T21:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "date": 2018-03-11T22:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "date": 2018-03-11T23:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "date": 2018-03-12T00:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "date": 2018-03-12T01:59:59.999Z,
    "value": "65659764",
  },
  Object {
    "date": 2018-03-12T02:59:59.999Z,
    "value": "67429079",
  },
  Object {
    "date": 2018-03-12T03:59:59.999Z,
    "value": "67848194",
  },
  Object {
    "date": 2018-03-12T04:59:59.999Z,
    "value": "67848194",
  },
  Object {
    "date": 2018-03-12T05:59:59.999Z,
    "value": "66682848",
  },
  Object {
    "date": 2018-03-12T06:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "date": 2018-03-12T07:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "date": 2018-03-12T08:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "date": 2018-03-12T09:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "date": 2018-03-12T10:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "date": 2018-03-12T11:59:59.999Z,
    "value": "82190131",
  },
  Object {
    "date": 2018-03-12T12:59:59.999Z,
    "value": "88255383",
  },
  Object {
    "date": 2018-03-12T13:59:59.999Z,
    "value": "91971202",
  },
  Object {
    "date": 2018-03-12T14:59:59.999Z,
    "value": "91971202",
  },
  Object {
    "date": 2018-03-12T15:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "date": 2018-03-12T16:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "date": 2018-03-12T17:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "date": 2018-03-12T18:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "date": 2018-03-12T19:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "date": 2018-03-12T20:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "date": 2018-03-12T21:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "date": 2018-03-12T22:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "date": 2018-03-12T23:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "date": 2018-03-13T00:59:59.999Z,
    "value": "76355733",
  },
  Object {
    "date": 2018-03-13T01:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "date": 2018-03-13T02:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "date": 2018-03-13T04:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "date": 2018-03-13T05:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "date": 2018-03-13T06:59:59.999Z,
    "value": "80725781",
  },
  Object {
    "date": 2018-03-13T07:59:59.999Z,
    "value": "81151711",
  },
  Object {
    "date": 2018-03-13T08:59:59.999Z,
    "value": "76401733",
  },
  Object {
    "date": 2018-03-13T09:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "date": 2018-03-13T10:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "date": 2018-03-13T11:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "date": 2018-03-13T12:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "date": 2018-03-13T13:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "date": 2018-03-13T14:59:59.999Z,
    "value": "87008258",
  },
  Object {
    "date": 2018-03-13T15:59:59.999Z,
    "value": "79489731",
  },
  Object {
    "date": 2018-03-13T16:59:59.999Z,
    "value": "79489731",
  },
  Object {
    "date": 2018-03-13T17:59:59.999Z,
    "value": "79489731",
  },
  Object {
    "date": 2018-03-13T18:59:59.999Z,
    "value": "83556516",
  },
  Object {
    "date": 2018-03-13T19:59:59.999Z,
    "value": "83556516",
  },
  Object {
    "date": 2018-03-13T20:59:59.999Z,
    "value": "83556516",
  },
  Object {
    "date": 2018-03-13T21:59:59.999Z,
    "value": "83556516",
  },
  Object {
    "date": 2018-03-13T22:59:59.999Z,
    "value": "88922389",
  },
  Object {
    "date": 2018-03-13T23:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "date": 2018-03-14T00:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "date": 2018-03-14T01:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "date": 2018-03-14T02:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "date": 2018-03-14T04:59:59.999Z,
    "value": "138040712",
  },
  Object {
    "date": 2018-03-14T05:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "date": 2018-03-14T06:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "date": 2018-03-14T07:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "date": 2018-03-14T08:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "date": 2018-03-14T09:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "date": 2018-03-14T10:59:59.999Z,
    "value": "140015326",
  },
  Object {
    "date": 2018-03-14T11:59:59.999Z,
    "value": "179896064",
  },
  Object {
    "date": 2018-03-14T12:59:59.999Z,
    "value": "169404539",
  },
  Object {
    "date": 2018-03-14T13:59:59.999Z,
    "value": "169404539",
  },
  Object {
    "date": 2018-03-14T14:59:59.999Z,
    "value": "169404539",
  },
  Object {
    "date": 2018-03-14T15:59:59.999Z,
    "value": "158251972",
  },
  Object {
    "date": 2018-03-14T16:59:59.999Z,
    "value": "168418936",
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": "168418936",
  },
]
`;
